# yoroi

./: .clang-format  .gitignore  11.py  CMakeLists.txt  README.md  T_tables.c  T_tables.h  enc_dec_12.py  main  makefile  res  run.sh  sbox_16.py  ssv_aes.h  test.c  tools.py  yoroi  yoroi-16.py  yoroi-32.py  yoroi.c  yoroi.h  yoroi16
buidl/: CMakeCache.txt  Makefile  cmake_install.cmake  main
buidl/lib/mbedtls/: CTestTestfile.cmake  Makefile  cmake_install.cmake  scripts
buidl/lib/mbedtls/crypto/include/: Makefile  cmake_install.cmake  mbedtls  psa
buidl/lib/mbedtls/crypto/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  data_files  scripts  suites
buidl/lib/mbedtls/include/: Makefile  cmake_install.cmake  mbedtls
buidl/lib/mbedtls/programs/: Makefile  cmake_install.cmake
buidl/lib/mbedtls/programs/aes/: Makefile  cmake_install.cmake
buidl/lib/mbedtls/programs/fuzz/: Makefile  (+1 more)
buidl/lib/mbedtls/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  compat.sh  data_files  scripts  ssl-opt.sh
include/: S_16.h  T_tables.h  common.h  kdf_ctr.h  present_12.h  yoroi.h
sample/: main.c  test.c  test_inv.c
sample/test_speed/: gen_sbox.c  gen_sbox.py  internal.h  main.c  run.sh  sbox.c
sample/wb-yoroi16/: a.out  add  addopaque.sh  flatten.sh  main  merge.sh  poly1  rubbish  split.sh  tigress-encodedata-add.sh  tigress-encodedata-poly1.sh  tigress-encodedata-same.sh  tigress-encodedata-xor.sh  tigress.sh  virtualize.sh  wb_yoroi16.c  xor
src/: S_16.c  T_tables.c  kdf_ctr.c  present_12.c  yoroi.c
test/: T_tables.py  tools.py  yoroi-16.py
(+14 files in other folders)
